data layer with remote datasource released

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,16 +5,21 @@ plugins {
 
 android {
     namespace 'com.avacodo.natlextesttask'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.avacodo.natlextesttask"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("apikey.properties").newDataInputStream())
+        def apiKey = properties.getProperty("openweathermap_api_key", "")
+        it.buildConfigField "String", "OPENWEATHERMAP_API_KEY", apiKey
     }
 
     buildTypes {
