--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,12 +40,12 @@ android {
 dependencies {
     implementation "io.insert-koin:koin-android:3.2.0"
 
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.3'
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
