--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-location:20.0.0'
+
     implementation "io.insert-koin:koin-android:3.2.0"
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
